Added qlack-fuse-security module